# trainscope

./: .gitignore  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: README.md  VALIDATION.md  architecture.md  diagnostics.md  index.md  usage.md
docs/figures/: architecture.tex
docs/validation-runs/: README.md  kaggle_2xT4.ipynb
docs/validation-runs/2026-06-08-kaggle-2xT4/: RESULTS.md  exp1_straggler.txt  exp2_bad_overlap.txt  exp2_good_overlap.txt  exp3_mfu.txt
docs/validation-runs/2026-06-08-kaggle-2xT4/runs/exp2_bad/: trace.json
docs/validation-runs/2026-06-08-kaggle-2xT4/runs/exp2_good/: trace.json
docs/validation-runs/2026-06-08-kaggle-2xT4/runs/exp3_mfu/: run.json
docs/validation-runs/2026-06-08-kaggle-2xT4/runs/gpu_straggler/rank0/: run.json
docs/validation-runs/2026-06-08-kaggle-2xT4/runs/gpu_straggler/rank1/: run.json
examples/: auto.py  cross_signal.py  ddp_gloo.py  efficiency_mfu.py  exposed_comm.py  manual_loop.py  pytorch_real.py
pytscope/: __init__.py  auto.py  cli.py  hardware.py
pytscope/analyzers/: __init__.py  distributed.py  memory.py  pipeline.py  repro.py  timing.py
pytscope/collectors/: memory.py
pytscope/core/: __init__.py  store.py
pytscope/diagnosis/: engine.py  rules.py  rules_convergence.py  rules_cross.py  rules_distributed.py  rules_memory.py
pytscope/integrations/: __init__.py  huggingface.py  lightning.py
tests/: test_auto.py  test_cli_report.py  test_diagnosis.py  test_distributed.py  test_distributed_gloo.py  test_edge_cases.py  test_efficiency.py  test_html_report.py  test_overhead.py  test_pipeline.py  test_precision.py  test_profiler.py  test_repro.py  test_scenarios.py  test_store.py  test_timing.py  test_trace.py  test_verticals.py  test_visualize_report.py
trainscope/: __init__.py  auto.py  cli.py  profiler.py
trainscope/analyzers/: convergence.py  distributed.py  efficiency.py  stats.py  trace.py
trainscope/core/: distributed.py  events.py  provenance.py
trainscope/diagnosis/: __init__.py  engine.py  rules_cross.py  rules_distributed.py  rules_efficiency.py
trainscope/integrations/: __init__.py  huggingface.py  lightning.py
trainscope/report/: __init__.py  charts.py  cli_report.py  html_report.py  visualize_report.py
