[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytscope"
dynamic = ["version"]
description = "An intelligence layer for ML training: live profiling + post-training diagnosis."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Sumukh Chaluvaraju", email = "sumukhchaluvaraj@gmail.com" }]
maintainers = [{ name = "Sumukh Chaluvaraju", email = "sumukhchaluvaraj@gmail.com" }]
keywords = [
    "pytorch",
    "profiling",
    "training",
    "machine-learning",
    "deep-learning",
    "mlops",
    "observability",
    "performance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = []  # core is pure-stdlib by design

[project.optional-dependencies]
torch = ["torch>=2.0"]
lightning = ["lightning>=2.0"]
huggingface = ["transformers>=4.30"]
dev = ["pytest>=7", "pytest-cov", "ruff>=0.4", "build", "twine"]

[project.scripts]
pytscope = "pytscope.cli:main"

[project.urls]
Homepage = "https://github.com/Sumu004/pytscope"
Repository = "https://github.com/Sumu004/pytscope"
Documentation = "https://github.com/Sumu004/pytscope/tree/main/docs"
Issues = "https://github.com/Sumu004/pytscope/issues"
Changelog = "https://github.com/Sumu004/pytscope/blob/main/CHANGELOG.md"

# Single-source the version from the package itself (pytscope.__version__),
# so a release is one edit in one file.
[tool.hatch.version]
path = "pytscope/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["pytscope"]

[tool.hatch.build.targets.sdist]
include = [
    "/pytscope",
    "/tests",
    "/examples",
    "/docs",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: end-to-end tests that spawn real processes (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 90
target-version = "py39"
# Notebooks under docs/ are runnable documentation (Kaggle/Colab cells with
# shell magics like `!torchrun ...`), not library code — exclude from linting.
extend-exclude = ["docs/**/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E731"]  # allow short lambdas in tests
